RESOLVED FIXED Bug 235704
[GTK][a11y] Ignore span elements with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=235704
Summary [GTK][a11y] Ignore span elements with ATSPI
Carlos Garcia Campos
Reported 2022-01-27 04:16:41 PST
Their text contents are exposed as part of the parent object.
Attachments
Patch (3.87 KB, patch)
2022-01-27 04:18 PST, Carlos Garcia Campos
aperez: review+
ews-feeder: commit-queue-
Carlos Garcia Campos
Comment 1 2022-01-27 04:18:05 PST
Carlos Garcia Campos
Comment 2 2022-01-27 23:03:38 PST
Note You need to log in before you can comment on or make changes to this bug.