[GTK][a11y] Ignore span elements with ATSPI https://bugs.webkit.org/show_bug.cgi?id=235704

Reviewed by Adrian Perez de Castro.

Their text contents are exposed as part of the parent object.

* accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject const):


Canonical link: https://commits.webkit.org/246522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288729 268f45cc-cd09-0410-ab3c-d52691b4dbfc